<resources>
    <string name="app_name">Mountain Trails Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appDescription">An application for tracking mountain trails.</string>
    <string name="appVersion">App version: %s</string>
    <string name="appAuthor">App author: %s</string>
    <string name="author" translatable="false">Leon Sovič</string>
    <string name="version" translatable="false">1.0</string>
    <string name="aboutButton">About</string>
    <string name="settingsButton">Settings</string>
    <string name="myTrailsButton">My Trails</string>
    <string name="exitButton">Exit</string>
    <string name="addButton">Add</string>
    <string name="distanceView">Distance</string>
    <string name="altitudeView">Altitude</string>
    <string name="startView">Start point</string>
    <string name="endView">End point</string>
    <string name="measuresView">Set measures</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>
    <string name="addTrailFragment">Add trail</string>
    <string name="addPoint">Add point</string>
    <string name="cancelPoint">Remove point</string>
    <string name="trailTitle">Trail title</string>
    <string name="hikeTitle">Hike title</string>
    <string name="description">Description</string>
    <string name="selectTrail">Select trail</string>
    <string name="trail">Trail</string>
    <string name="selectDate">Select date</string>
</resources>